--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
+/* body {
   padding: 20px;
-}
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+} */
